--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Author" content="Pranavarsh Nukala"/>
+    <meta name="contact-email-id" content="pranavarshn2000@gmail.com"/>
+    <title>Dictionary</title>
+    <link rel="icon" href="https://png.pngtree.com/png-clipart/20230823/original/pngtree-book-dictionary-icon-vector-isolated-picture-image_8227538.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+    <nav id="nav">
+        <div id="nav-logoAndText">
+            <a href="https://www.google.com">
+                <div id="nav-logo-img"></div>
+            </a>
+            <div id="nav-logo-text"><a href="https://www.google.com">
+                    <h1 id="nav-logo-text-heading">My Dictionary App</h1>
+                </a></div>
+        </div>
+
+        <div id="nav-history-btn-container">
+            <button id="nav-history-button">HISTORY</button>
+        </div>
+    </nav>
+
+    <main id="main">
+        <div id="main-content">
+            <label for="main-content-entry-input">
+                <h2>Search for new word</h2>
+            </label>
+            <div id="main-content-entry">
+                <input id="main-content-entry-input" />
+                <i class="fa-solid fa-magnifying-glass search"></i>
+            </div>
+        </div>
+
+        <section id="section">
+            
+
+        </section>
+
+    </main>
+
+    <div id="overlay-history-note">
+        <h4>Search any word to see in history</h4>
+    </div>
+
+    <section id="overlay-history">
+        
+    </section>
+
+    <footer id="footer">
+        <div id="footer-main-container">
+            <h3>From Pranavarsh Nukala</h3>
+            <div id="footer-icons-container">
+                <a target="_blank" href="https://www.linkedin.com/in/pranavarsh-nukala-40361b177/"><i class="fa-brands fa-linkedin"></i></a>
+                <a target="_blank" href="https://github.com/Alien1289"><i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
+    <script src="./App.js"></script>
+</body>
+
+</html>
+
+
+
 
