--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav id="nav">
         <div id="nav-logoAndText">
-            <a href="https://www.google.com">
+            <a href="#nav">
                 <div id="nav-logo-img"></div>
             </a>
             <div id="nav-logo-text"><a href="https://www.google.com">
