--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#nav">
                 <div id="nav-logo-img"></div>
             </a>
-            <div id="nav-logo-text"><a href="https://www.google.com">
+            <div id="nav-logo-text"><a href="#nav">
                     <h1 id="nav-logo-text-heading">My Dictionary App</h1>
                 </a></div>
         </div>
